/*
MIT License
Copyright(c) 2020 Futurewei Cloud

    Permission is hereby granted,
    free of charge, to any person obtaining a copy of this software and associated documentation files(the "Software"), to deal in the Software without restriction,
    including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and / or sell copies of the Software, and to permit persons
    to whom the Software is furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
    
    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
    WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
*/

syntax = "proto3";

package alcorcontroller;

option java_package = "com.futurewei.alcor.controller.schema";
option java_outer_classname = "Vpc";

import "common.proto";

message VpcConfiguration {
    int32 version = 1;

    string project_id = 2;
    string id = 3;
    string name = 4;
    string cidr = 5;
    int64 tunnel_id = 6;

    message SubnetId {
        string id = 1;
    }

    message Route {
        string destination = 1;
        string next_hop = 2;
    }

    message TransitRouter {
        string vpc_id = 1;
        string ip_address = 2;
        string mac_address = 3;
    }

    repeated SubnetId subnet_ids = 7;
    repeated Route routes = 8;
    repeated TransitRouter transit_routers = 9;
}

message VpcState {
    OperationType operation_type = 1;
    VpcConfiguration configuration = 2;
}
